# FakeMPI

./: .pre-commit-config.yaml  CMakeLists.txt  COPYING.md  LICENSE.md  README.md
.github/workflows/: ci.yml  test.yml
include/: experimental_unimpi.h  mpi.h  mpio.h  unimpi.h
lib/: experimental_unimpi.c  mpi.c  unimpi.c
test/: CMakeLists.txt  runtest.sh.in
test/project/: CMakeLists.txt  helloworld.c
